src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail05.jova
class Tmp {

   Tmp(int test) {
    String hallo;
   }

   Tmp (String s, int test) {
        String hallo;
        String hallo;
   }
}